--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,8 +5,10 @@ edition = "2021"
 license = "MIT OR Apache-2.0"
 name = "cargo-stack"
 repository = "https://github.com/yvan-sraka/cargo-cabal"
-version = "0.1.0"
+version = "0.1.1"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+ansi_term = "0.12.1"
+cargo-cabal = { git = "https://github.com/yvan-sraka/cargo-cabal", branch = "stack-support" }
